kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tower-ha-discovery
  namespace: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tower-ha-discovery
  template:
    metadata:
      labels:
        app: tower-ha-discovery
    spec:
      containers:
      - name: tower-ha-discovery
        image: mifs01.intranet:5001/home/tower-ha-discovery:7e23956
        volumeMounts:
        - name: config
          mountPath: /etc/tower-ha-discovery
        resources:
          requests:
            memory: "20Mi"
            cpu: "0"
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: config
        configMap:
          name: tower-ha-discovery
          items:
          - key: config.json
            path: config.json
