kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tower-ha-discovery
  namespace: home-assistant
spec:
  selector:
    app: tower-ha-discovery
  ports:
  - name: http
    port: 8080
    targetPort: http
